packages/jsts/tests/dbd/benchmark/TypeError/T12 X is not a function/T12-04/fixed.js
function foo(bar) {
  ('' + bar).toUpperCase();
}

foo(1);